remove hanging i18n ids && centralize environment handling && fix course cover image text overflow

--- a/src/app/dashboard/dashboard-tile.scss
+++ b/src/app/dashboard/dashboard-tile.scss
@@ -76,15 +76,19 @@
             overflow: hidden;
           }
 
+          &.has-course-cover {
+            padding: 0.5rem;
+          }
+
           .dashboard-course-cover {
             display: flex;
             justify-content: center;
             width: 100%;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.25rem;
 
             img {
-              width: 80px;
-              height: 80px;
+              width: 48px;
+              height: 48px;
               object-fit: cover;
               border-radius: 4px;
               border: 1px solid v.$grey;
